<resources>
    <string name="app_name">TheMovieBookingApp</string>
    <string name="lbl_welcome">Welcome!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">" Close Drawer"</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_welcome_back">Welcome back, login to continue</string>
    <string name="lbl_hello_welcome_to_gaxaly_app">Hello! Welcome to Gaxaly App.</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_combo_set_m">Combo set M</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_select_a_language">Select a language</string>
    <string name="lbl_terms_of_service">Terms of Service</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_log_out">Log out</string>

    <string name="lbl_text">There were only two ways to get out of this mess if they all worked together. The problem was that neither was all that appealing. One would likely cause everyone a huge amount of physical pain while the other would likely end up with everyone in jail. In Sam\'s mind, there was only one thing to do. He threw everyone else under the bus and he secretly sprinted away leaving the others to take the fall without him.There were only two ways to get out of this mess if they all worked together. The problem was that neither was all that appealing. One would likely cause everyone a huge amount of physical pain while the other would likely end up with everyone in jail. In Sam\'s mind, there was only one thing to do. He threw everyone else under the bus and he secretly sprinted away leaving the others to take the fall without him. </string>
</resources>