<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeScreenActivity"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card_medium_2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewProfile"
                    android:layout_width="@dimen/width_profile"
                    android:layout_height="@dimen/height_profile"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    app:cardCornerRadius="@dimen/margin_xlarge">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_profile" />

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_card_medium_2"
                    android:layout_marginTop="@dimen/margin_card_medium"
                    android:layout_toEndOf="@id/cardViewProfile"
                    android:text="Hi Lily!"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/vpNowShowing"
                    layout="@layout/view_pod_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardViewProfile"
                    android:layout_marginTop="@dimen/margin_small" />

                <include
                    android:id="@+id/vpComingSoon"
                    layout="@layout/view_pod_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vpNowShowing" />


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorAccent"
            android:maxWidth="300dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/ivProfileDrawer"
                    android:layout_width="@dimen/width_profile"
                    android:layout_height="@dimen/height_profile"
                    android:layout_marginTop="@dimen/margin_top_drawer"
                    android:layout_marginBottom="@dimen/margin_xlarge"
                    app:cardCornerRadius="@dimen/margin_xlarge">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_profile" />
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ivProfileDrawer"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_toEndOf="@id/ivProfileDrawer"
                    android:text="Lily"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvProfileName"
                    android:layout_alignStart="@id/tvProfileName"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="Lily@gmail.com"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tvEmail"
                    android:layout_alignParentEnd="true"
                    android:text="@string/lbl_edit"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/llPromotionCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivProfileDrawer"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:weightSum="10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_large"
                        android:layout_weight="2"
                        android:src="@drawable/ic_baseline_local_offer_white_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_weight="8"
                        android:text="@string/lbl_promotion_code"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSelectLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llPromotionCode"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:weightSum="10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_large"
                        android:layout_weight="2"
                        android:src="@drawable/ic_baseline_g_translate_white_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_weight="8"
                        android:text="@string/lbl_select_a_language"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTermsOfService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llSelectLanguage"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:weightSum="10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_large"
                        android:layout_weight="2"
                        android:src="@drawable/ic_baseline_assignment_white_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_weight="8"
                        android:text="@string/lbl_terms_of_service"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llTermsOfService"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:weightSum="10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_large"
                        android:layout_weight="2"
                        android:src="@drawable/ic_baseline_help_white_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_weight="8"
                        android:text="@string/lbl_help"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRateUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llHelp"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:weightSum="10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_large"
                        android:layout_weight="2"
                        android:src="@drawable/ic_baseline_stars_white_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_weight="8"
                        android:text="@string/lbl_rate_us"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/margin_xlarge"
                    android:weightSum="10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_large"
                        android:layout_weight="2"
                        android:src="@drawable/ic_baseline_login_white_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_weight="8"
                        android:text="@string/lbl_log_out"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>

            </RelativeLayout>

        </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>